layout issue is fixed

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -543,7 +543,7 @@
 	line-height: 14px;
 }
 .login-layout {
-	height: 100vh;
+	min-height: 100vh;
 	margin: 0;
 	width: 100%;
 	background: #ebebeb;
